# AI_Report_Agent

./: .env.example  .gitignore  README.md  launch.bat  pyproject.toml
backend/: headless_context.py  native_dialog.py  requirements.txt  server.py
backend/app/: config.py  docx_report_filler.py  excel_template.py  excel_transfer.py  filename.py  generator.py  hotkey.py  image_mapper.py  mapper.py  pptx_render.py  pptx_template.py  settings.py
backend/app/agent/: budget.py  docx_render.py  folder_scan.py  mapping_suggester.py  orchestrator.py  registry.py  reviewer.py  template_edit.py  tools.py  visual_filler.py  visual_placer.py
backend/app/agent/llm/: __init__.py  base.py  gemini.py  ollama.py
backend/static/: index.html
backend/static/assets/: index-CaN_2HHj.css  index-YmdVyhm1.js
docs/: AI_Report_Agent_操作SOP.docx  USAGE.md  build_sop_full.js
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Markdown.tsx  PathPicker.tsx  Stepper.tsx  ui.tsx
frontend/src/lib/: api.ts  store.tsx
frontend/src/screens/: AgentChat.tsx  AiEngine.tsx  ExcelTransfer.tsx  ImageMapping.tsx  ReportWizard.tsx  Settings.tsx
